# hbrainfuck

./: README.md  brainfuck.cabal
app/: Main.hs
src/Brainfuck/: Interpreter.hs  Parser.hs  Util.hs
tests/Brainfuck/: ParserSpec.hs
